# Weather

./: Cargo.toml  README.md  mongo-init.js
.github/workflows/: rust.yml
src/: lib.rs  simulator.rs
